--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/mainStyles.css" />
-    <link rel="stylesheet" href="css/card.css" />
-		<link rel='stylesheet' href='css/dscountdown.css' type='text/css' media='all' />
-    <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
+    <link rel="stylesheet" href="/css/mainStyles.css" />
+    <link rel="stylesheet" href="/css/adminPanel.css" />
+    <link rel="stylesheet" href="/css/card.css" />
+		<link rel='stylesheet' href='/css/dscountdown.css' type='text/css' media='all' />
+    <link rel="stylesheet" href="/css/flexslider.css" type="text/css" media="screen" property="" />
     <!-- gallery -->
     <link href="css/lsb.css" rel="stylesheet" type="text/css">
     <!-- //gallery -->
