--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/mainStyles.css" />
     <link rel="stylesheet" href="/css/adminPanel.css" />
     <link rel="stylesheet" href="/css/card.css" />
+    <link rel="stylesheet" href="/css/card2.css" />
 		<link rel='stylesheet' href='/css/dscountdown.css' type='text/css' media='all' />
     <link rel="stylesheet" href="/css/flexslider.css" type="text/css" media="screen" property="" />
     <!-- gallery -->
