--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,8 +9,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="/css/mainStyles.css" />
     <link rel="stylesheet" href="/css/adminPanel.css" />
     <link rel="stylesheet" href="/css/card.css" />
@@ -18,10 +18,10 @@
 		<link rel='stylesheet' href='/css/dscountdown.css' type='text/css' media='all' />
     <link rel="stylesheet" href="/css/flexslider.css" type="text/css" media="screen" property="" />
     <!-- gallery -->
-    <link href="css/lsb.css" rel="stylesheet" type="text/css">
+    <link href="/css/lsb.css" rel="stylesheet" type="text/css">
     <!-- //gallery -->
     <!-- font-awesome-icons -->
-    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700,900" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
